adding tasks to automatize the addition of v8 methods; working on standalone scfair compliance validation; add API endpoint to get the JSON describing metadata for a given loom file from a project
